text overflow fix

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -106,6 +106,16 @@
 	}
 }
 
+.event_overview
+{
+	h3
+	{
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		overflow: hidden;
+	}
+}
+
 #welcome_carousel
 {
 	margin: 0 0 30px 0;
